@@ -329,6 +329,10 @@ typedef struct Settings {
    /* Location at which we calculate the declination if
     * z[Q_DECLINATION] == HUGE_REAL. */
    real dec_x, dec_y, dec_z;
+   /* Cached auto-declination, or HUGE_REAL for no cached value.  Only
+    * meaningful if date1 != -1.
+    */
+   real declination;
    meta_data * meta;
 } settings;
 
