@@ -1,0 +1,29 @@
+./cmd_declination_auto.svx:11: warning: No survey date specified - using 0 for magnetic declination
+./cmd_declination_auto.svx:27: warning: No survey date specified - using 0 for magnetic declination
+
+Removing trailing traverses...
+
+Concatenating traverses...
+
+Simplifying network...
+
+Calculating network...
+
+Calculating traverses...
+
+Calculating trailing traverses...
+
+Calculating statistics...
+
+Survey contains 11 survey stations, joined by 10 legs.
+There are 0 loops.
+Total length of survey legs =  115.23m ( 115.23m adjusted)
+Total plan length of survey legs =  111.98m
+Total vertical length of survey legs =    5.00m
+Vertical range = 4.87m (from a.1 at 1234.00m to c.3 at 1229.13m)
+North-South range = 107.57m (from d.2 at 5282107.57m to a.1 at 5282000.00m)
+East-West range = 6.39m (from a.1 at 410600.00m to d.1 at 410593.61m)
+   4 1-nodes.
+   5 2-nodes.
+   2 3-nodes.
+There were 2 warning(s).
