@@ -1,0 +1,12 @@
+( Easting, Northing, Altitude )
+(410600.00, 5282000.00,  1234.00 ) 1
+(410600.00, 5282000.00,  1234.00 ) a.1
+(410593.61, 5282007.62,  1232.95 ) a.2
+(410593.61, 5282008.84,  1233.08 ) a.3
+(410593.61, 5282007.62,  1232.95 ) b.1
+(410593.61, 5282007.62,  1231.95 ) b.2
+(410593.61, 5282007.62,  1231.95 ) c.1
+(410593.61, 5282007.62,  1230.95 ) c.2
+(410594.29, 5282007.18,  1229.13 ) c.3
+(410593.61, 5282007.62,  1230.95 ) d.1
+(410596.58, 5282107.57,  1230.95 ) d.2
